tests/samples/negative/expressions/const_struct_field_access.ax
module const_struct_field_access;

struct S {
  value: i32;
}

const S_VALUE: S = S { value: 1 };

fn main() -> i32 {
  S_VALUE.value = 2;
  return 0;
}
